<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_stalls"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_stalls" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_forum_black_24dp"
        android:title="@string/title_news" />

</menu>
