<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingRight="@dimen/padding_right"
              android:paddingLeft="@dimen/padding_left"
              android:gravity="center_vertical|center_horizontal">
    <EditText
        android:id="@+id/email_login_edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password_login_edit_text"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/login_button"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:paddingTop="@dimen/label_padding_top"
        android:textAlignment="center"
        android:id="@+id/register_link_text_view"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>